test: add tests to increase branch coverage
- Add test for TaskService snapshot with null oldStatus
- Add test for BatchTaskService update when request is null
- Add tests for CacheMetricsService null cache and hit rate calculation
- Add tests for SqlInjectionValidator sanitization and validation branches
- Fix duplicate test method in BatchTaskServiceTest
- Fix SqlInjectionValidatorTest assertion for short strings with dangerous chars

Current coverage: 91.72% lines, 75.58% branches
All 423 tests passing